--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@ None
 
 	function quadratic()
 	{
+		
+		console.log("WHYYYYYYY");
 		// Assigns values to existing variables based on user input. Converts string input to numerical input.
     		var a = parseFloat(document.getElementById("a").value);
     		var b = parseFloat(document.getElementById("b").value);
@@ -248,7 +250,7 @@ None
 						<!--Label for second input field.-->
 						<label for="b">b constant:</label><br>
 						<!--User input box.-->
-						<input type="number" id="b" value="0"><br><
+						<input type="number" id="b" value="0"><br>
 
 						<label for="c">c constant:</label><br>
 						<!--User input box.-->
