i think i used a reserved function

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ None
     		displayResults();
 	}
 
-	function quadratic()
+	function qfunc()
 	{
 		
 		console.log("WHYYYYYYY");
@@ -264,7 +264,7 @@ None
 				
 						<center>
 						<!--Button. When clicked, runs the addition() function.-->
-						 	<a onclick="quadratic();" class="w3-btn w3-deep-purple">Compute Y</a><br>
+						 	<a onclick="qfunc();" class="w3-btn w3-deep-purple">Compute Y</a><br>
 	
 						<!--The following placeholder p element text should be replaced with the results of the calculation.-->
 						 <div id="content" class="w3-container">
