--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@ None
 
 	function qfunc()
 	{
-		
-		console.log("WHYYYYYYY");
+	
 		// Assigns values to existing variables based on user input. Converts string input to numerical input.
     		var a = parseFloat(document.getElementById("a").value);
     		var b = parseFloat(document.getElementById("b").value);
@@ -112,6 +111,7 @@ None
 			
 
     		outputNumber = a * x * x + b * x + c;
+		console.log(outputNumber);
     
     		displayResults();
 	}
