finally should be fine

--- a/index.html
+++ b/index.html
@@ -111,9 +111,8 @@ None
 			
 
     		outputNumber = a * x * x + b * x + c;
-		console.log(outputNumber);
     
-    		displayResults();
+    		document.getElementById("end2").innerHTML = outputNumber;
 	}
   
   
@@ -268,7 +267,7 @@ None
 	
 						<!--The following placeholder p element text should be replaced with the results of the calculation.-->
 						 <div id="content" class="w3-container">
-							   <p id="end">Results should appear here.</p>
+							   <p id="end2">Results should appear here.</p>
 						 </div>
 
 						 <br>
